# iac_comparison

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cdk.json  cdk_app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  setup.cfg
aws_lambda/: receive_telegram.py  receive_twilio.py
bridge/: app.py  configuration.py  repository.py
bridge/fileio/: retrieval.py
cdk/: __init__.py  lambda_function.py  lambda_functions.py
edifice_bridge/: app.py  configuration.py  dynamodb_service.py  logger.py  providers.py  repository.py  s3_service.py
edifice_bridge/fileio/: path.py  retrieval.py
presentation/: conf.py  index.rst
tfcdk/: Pipfile  build.py  main.py
