[tool.poetry]
name = "edifice_bridge"
version = "0.1.0"
description = "Edifice Twilio-Telegram bridge"
authors = ["Pavle Portic <pavle.portic@smartcat.io>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
"aws-cdk.core" = "~1.63.0"
"aws-cdk.aws_apigateway" = "~1.63.0"
"aws-cdk.aws_dynamodb" = "~1.63.0"
"aws-cdk.aws_lambda" = "~1.63.0"
"aws-cdk.aws_s3" = "^1.63.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
